# crmx-bridge-golioth

./: .gitmodules  README.md
crmx-bridge/: #auto_saved_files#  crmx-bridge.kicad_pcb  crmx-bridge.kicad_prl  crmx-bridge.kicad_pro  crmx-bridge.kicad_sch  fp-info-cache  hmi.kicad_sch
crmx-bridge-firmware/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
crmx-bridge-firmware/components/esp32-rotary-encoder/: CMakeLists.txt
crmx-bridge-firmware/components/ssd1306/: CMakeLists.txt  ssd1306.c  ssd1306.h
crmx-bridge-firmware/main/: CMakeLists.txt  Color.h  DmxSwitcher.cc  DmxSwitcher.h  Settings.h  SettingsHandler.cc  SettingsHandler.h  SettingsRegistry.cc  SettingsRegistry.h  Strings.h  TimoInterface.cc  TimoInterface.h  TimoReg.h  UserInterface.h  device_config.h  golioth_credentials.c  golioth_credentials.h  golioth_nvs.c  golioth_nvs.h  idf_component.yml  main.cc  main.cpp  ssd1106.c  ssd1106.h  util.h  wifi_manager.cc  wifi_manager.h  wifi_task.cc  wifi_task.h
crmx-bridge-firmware/main/ui/: Enums.h  HomePage.cc  HomePage.h  NavigationController.cc  NavigationController.h  PopupSelector.cc  PopupSelector.h  SettingsPage.cc  SettingsPage.h  Style.cc  Style.h  ui.h  ui_main.cc  ui_priv.cc  ui_priv.h  view_models.h
crmx-bridge-hmi/: .gitignore  crmx-bridge-hmi.kicad_pcb  crmx-bridge-hmi.kicad_prl  crmx-bridge-hmi.kicad_pro  crmx-bridge-hmi.kicad_sch  fp-info-cache
crmx-bridge-hmi/design_outputs/: crmx-bridge-hmi-PCBA_V0.3.step
crmx-bridge-hmi/fab_outputs/V0.3/: bom-jlc.csv  bom-other.csv  bom.csv  (+4 more)
crmx-bridge/design_outputs/: HMI Layout test 1.dxf
(+20 files in other folders)
